# tcp_ip_practice

./: .gitignore  README.md
dns/: README.md  gethostbyname_test.c  test
echo_server/: CMakeLists.txt
echo_server/src/: client.c  server.c
half_close/: CMakeLists.txt  output.txt
half_close/include/: const.h
half_close/src/: client.c  server.c
op_server/: CMakeLists.txt
op_server/src/: client.c  server.c
udp/: CMakeLists.txt  README.md
udp/src/: client.c  server.c
